# tifft

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml  test.yml
tests/: __init__.py  test_bollingerbands.py  test_cli.py  test_datareader.py  test_macd.py  test_rsi.py
tifft/: __init__.py  bollingerbands.py  cli.py  datareader.py  macd.py  rsi.py
