[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tifft"
version = "0.2.0"
description = "Technical Indicators for Financial Trading"
authors = [{name = "Daichi Narushima", email = "dceoy@users.noreply.github.com"}]
maintainers = [{name = "Daichi Narushima", email = "dceoy@users.noreply.github.com"}]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
  "docopt >= 0.6.2",
  "pandas >= 2.2.2",
  "pandas-datareader>=0.10.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/dceoy/tifft"
Repository = "https://github.com/dceoy/tifft"

[project.scripts]
tifft = "tifft.cli:main"

[tool.uv]
dev-dependencies = [
  "ruff >= 0.11.0",
  "pyright >= 1.1.402",
  "pytest >= 8.0.0",
  "pytest-mock >= 3.12.0",
  "pytest-cov >= 5.0.0",
  "pandas-stubs >= 2.2.3.250527",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
